# marek-cel

./: .gitmodules  README.md
armadillo/: .gitignore
bash/: adb_push.sh  adb_shell.sh  adb_tcpip.sh  badblocks.sh  calibrate_joystick.sh  capture_camera.sh  clear_swap.sh  convert_jpg_to_pdf.sh  convert_pdf_to_djvu.sh  convert_webp_to_jpg.sh  create_tar.sh  ffmpeg_capture.sh  ffmpeg_convert.sh  ffmpeg_merge.sh  ffmpeg_png_to_mp4.sh  ffmpeg_truncate.sh  flush_dns.sh  glxgears.sh  gpu_prime_select.sh  grub_update.sh  install_LinuxMint_aitools.sh  install_LinuxMint_cax.sh  install_LinuxMint_creative.sh  install_LinuxMint_develop.sh  install_LinuxMint_docker.sh  install_LinuxMint_essentials.sh  install_LinuxMint_extras.sh  install_LinuxMint_flightgear.sh  install_LinuxMint_kodi.sh  install_LinuxMint_vnc.sh  install_LinuxMint_webserver.sh  install_UbuntuServer_all.sh  install_UbuntuServer_develop.sh  install_UbuntuServer_docker.sh  install_UbuntuServer_file_server.sh  install_UbuntuServer_gitlab.sh  install_UbuntuServer_jenkins.sh  install_UbuntuServer_kvm.sh  install_UbuntuServer_web_server.sh  install_UbuntuServer_zone_minder.sh  (+48 more)
boost/: project.files
check/: run_cppcheck.sh  run_cpplint.sh  run_scan-build.sh
cmake/basic/: CMakeLists.txt  main.cpp
cmake/libtestAB/: .gitignore  CMakeLists.txt
cmake/libtestAB/src/dirA/: CMakeLists.txt  ClassA.cpp
cmake/libtestAB/src/dirB/: CMakeLists.txt  ClassB.cpp  ClassB.h
cpp/cmake/00_project/src/: CMakeLists.txt  main.cpp
cpp/cmake/libtestAB/: CMakeLists.txt
cpp/cmake/libtestAB/src/dirA/: ClassA.h
cpp/cmake/libtestAB/utils/: build.py  clean.py
cpp/plugins/src/: CMakeLists.txt  main.cpp  plugin_interface.h
cpp/plugins/src/hello_plugin/: CMakeLists.txt  hello_plugin.cpp
cpp/plugins/src/math_plugin/: CMakeLists.txt  math_plugin.cpp
cpp_libs/ImGui/05_sdl_osg/: CMakeLists.txt  vcpkg.json
cpp_libs/ImGui/05_sdl_osg/src/: CMakeLists.txt  main.cpp  remapKeysFromSdlToOsg.cpp  remapKeysFromSdlToOsg.h
cpp_libs/ImGui/05_sdl_osg/src/gui/: ImGuiApp.cpp  ImGuiApp.h  ImGuiEventHandler.cpp  ImGuiEventHandler.h
cpp_libs/ImGui/07_glfw_osg/: CMakeLists.txt
cpp_libs/ImGui/07_glfw_osg/src/: ImGuiApp.cpp  ImGuiApp.h  ImGuiEventHandler.cpp  ImGuiEventHandler.h  KeyMap.cpp  KeyMap.h  SceneRoot.cpp  SceneRoot.h  main.cpp
cpp_libs/SDL2/04_osg/: CMakeLists.txt
cpp_libs/SDL2/04_osg/src/: CMakeLists.txt  KeyMap.cpp  KeyMap.h  main.cpp
cpp_libs/VTK/01_SPH/: CMakeLists.txt
cpp_libs/VTK/01_SPH/src/: CMakeLists.txt  SPH.h  Widget.cpp  Widget.h  Widget.ui  main.cpp
cpp_libs/VulkanSceneGraph/01_HelloVSG/: CMakeLists.txt
cpp_libs/VulkanSceneGraph/01_HelloVSG/src/: CMakeLists.txt  main.cpp
cpp_libs/X-Plane SDK/03_extra_forces/: .gitignore  CMakeLists.txt
cpp_libs/X-Plane SDK/03_extra_forces/src/: CMakeLists.txt  GUI.cpp  GUI.h  GUI.ui  UdpSocket.cpp  databuf.h  main.cpp
cpp_libs/X-Plane SDK/03_extra_forces/src/plugin/: CMakeLists.txt  plugin.cpp
cpp_libs/libnova/: CMakeLists.txt
cpp_libs/libnova/src/: CMakeLists.txt  main.cpp  test.py
cpp_libs/nativefiledialog/01_hello_world/: CMakeLists.txt  CMakePresets.json
cpp_libs/nativefiledialog/01_hello_world/src/: CMakeLists.txt  main.cpp
data/: bnd_polbnd.dbf  bnd_polbnd.prj  bnd_polbnd.shp  bnd_polbnd.shx  engine.raw  layers.xml  oahu_merc.tif  simple.earth
docker/: kill_all_processes.sh  list_containers.sh  list_images.sh  purge.sh  remove_all_images.sh  remove_all_processes.sh  run_Ubuntu2004.sh
git/: gitignore.unreal.sample
glsl/110/07_NestedShaders/: CMakeLists.txt  project.pro  project.qrc
glsl/110/07_NestedShaders/shaders/: shader.frag  shader.vert
glsl/110/07_NestedShaders/src/: MainWindow.cpp  MainWindow.h  Nested.cpp  Nested.h  SceneRoot.cpp  SceneRoot.h
glsl/330/00_HelloWorld/: CMakeLists.txt
glsl/330/00_HelloWorld/shaders/: shader.frag  shader.vert
glsl/330/00_HelloWorld/src/: CameraCtrl.h  WindowGL.cpp  WindowGL.h
installers/CPack/: CMakeLists.txt
jenkins/cpp-docker/: CMakeLists.txt  Jenkinsfile  build.sh  clean.sh  generate_coverage-report.sh  run_tests.sh
jenkins/cpp-docker/docker/: Dockerfile  build_docker_image.sh  build_image.py
jenkins/cpp-docker/src/: main.cpp
jenkins/cpp-docker/tests/: CMakeLists.txt
jenkins/cpp-docker/utils/: clean.py  generate_coverage-report.py
jenkins/cpp-simple-example/tests/: CMakeLists.txt
latex/: .gitignore
linux/: install_LinuxMint_aitools.sh  install_LinuxMint_cax.sh  install_LinuxMint_creative.sh  install_LinuxMint_develop.sh  install_LinuxMint_docker.sh  install_LinuxMint_essentials.sh  install_LinuxMint_extras.sh  install_LinuxMint_webserver.sh  install_RPiOS_develop.sh  install_UbuntuServer_all.sh  install_UbuntuServer_develop.sh  install_UbuntuServer_essentials.sh  install_UbuntuServer_jenkins.sh  install_UbuntuServer_minecraft.sh  install_UbuntuServer_zone_minder.sh  install_WSL2_cax.sh  install_WSL2_develop.sh  install_WSL2_essentials.sh  temp_monitor.sh
octave/: horizontal_tail_incidence.m
osg/: .gitignore
physics/multi-body-dynamics/example_02/: CMakeLists.txt
physics/multi-body-dynamics/example_02/src/: SceneRoot.cpp  SceneRoot.h  main.cpp
python/PythonCppBinding/src/: CMakeLists.txt  foobar.cpp  foobar.h
qt/CMake-Qt4/: CMakeLists.txt  main.h
qt/CMake-Qt4/gui/: CMakeLists.txt
qt/CMake-Qt5/: CMakeLists.txt
rust/00-project/: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
rust/00-project/examples/: basic_usage.rs
rust/00-project/src/: lib.rs  main.rs
rust/00-project/tests/: integration_tests.rs
sql/: 02_alter_table_update.sql  03_aggregate_functions_variables.sql  05.sql  10.sql  11_transactions.sql  16_triggers.sql  17_functions.sql  test.xls
ue4/: build_ue4_4.22.sh  build_ue4_4.24.sh  clone_ue4_4.22.sh  clone_ue4_4.24.sh
uml/: db_crows_foot.dia  deployment_diagram.dia  generate_code.sh  uml_activity_diagram.dia  uml_class_diagram.dia  use_case_diagram.dia  (+3 more)
vcpkg/06_gtest/: CMakeLists.txt  CMakePresets.json  add_vcpkg_ports.bat  vcpkg-configuration.json
vcpkg/06_gtest/src/: MyClass.h  main.cpp
vcpkg/06_gtest/tests/: CMakeLists.txt  TestMyClass.cpp
(+3083 files in other folders)
